@@ -1,7 +1,6 @@
 package com.example.project5.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -48,7 +47,7 @@ public class FreeSharePostReplyService {
         
         return list.stream()
                 .map(FreeSharePostReplyReadDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
         
     }
     
